--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@
 
   @media screen and (min-width: 1920px) {
     html {
-      font-size: 18px;
+      font-weight: 600;;
+      font-size: 20px;
     }
   }
 }
